--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -31,7 +31,13 @@
             <a
               class="download-btn btn btn-lg"
               href="https://itunes.apple.com/app/id{{ site.app.ios_id }}?mt=8&at={% include apple-affiliate.html %}">
-              <i class="fa fa-apple fa-lg" aria-hidden="true"></i> App Store
+              <i class="fab fa-apple fa-lg" aria-hidden="true"></i> App Store
+            </a>
+
+            <a
+              class="download-btn btn btn-lg"
+              href="https://groups.google.com/forum/#!forum/noto-app">
+              <i class="far fa-question-circle fa-lg" aria-hidden="true"></i> Need help?
             </a>
 
             {% if site.app.android_id %}
@@ -74,6 +80,6 @@
 
 <div class="footer">
   <div class="container">
-    <!-- footer text here -->
+    <img class="lac" src="images/lac.svg"/>
   </div>
 </div>
