--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -23,7 +23,7 @@
           {% endif %}
 
           <div class="marketing-desc">
-            <p>Email notes to youself instantly. With Noto, start typing and swipe to email your personal or work email. Or tap the share button in your favorite app.</p>
+            <p>Email notes to yourself instantly. With Noto, start typing and swipe to email your personal or work email. Or tap the share button in your favorite app.</p>
             <p>Triage notes in <a href="https://support.google.com/mail/answer/6579?hl=en">inbox</a> or integrate with email-enabled services like <a href="http://evernote.com/contact/support/kb/#/article/23480523">Evernote</a> or via <a href="https://ifttt.com/discover">IFTTT</a>.</p>
             <p><b>Privacy policy</b>: we do not store or use any personal information except on user devices for sending user emails.</p>
           </div>
