--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -25,6 +25,15 @@
           <div class="marketing-desc">
             <p>Email notes to yourself instantly. With Noto, type and swipe to email your work or personal address.</p>
             <p>Triage notes in <a href="https://support.google.com/mail/answer/6579?hl=en">inbox</a> or integrate with email-enabled services like <a href="http://evernote.com/contact/support/kb/#/article/23480523">Evernote</a> or via <a href="https://ifttt.com/discover">IFTTT</a>.</p>
+
+            <p>
+              Why Noto?
+            </p>
+            <ul>
+              <li>Send to two addresses</li>
+              <li>Manage draft notes</li>
+              <li>Guide Noto <a href="https://github.com/noto-app/org/issues">development</a></li>
+            </ul>
             <p><b>Privacy policy</b>: we do not store or use any personal information except on user devices for sending user emails.</p>
           </div>
           <div class="download-buttons">
