--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -32,7 +32,7 @@
             <ul>
               <li>Send to two addresses</li>
               <li>Manage draft notes</li>
-              <li>Guide Noto <a href="https://github.com/noto-app/org/issues">development</a></li>
+              <li>Under <a href="https://github.com/noto-app/org/issues">active</a> development</li>
             </ul>
             <p><b>Privacy policy</b>: we do not store or use any personal information except on user devices for sending user emails.</p>
           </div>
